--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.jar=${dist.dir}/RecognizerCharactersIA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.weka.jar=/home/ingenico/git/neuralnetworkIA/build/weka.jar
+file.reference.weka.jar=weka.jar
 includes=**
 jar.compress=false
 javac.classpath=\
